k8s-cluster-requirements.yaml
---
apiVersion: v1 # -------------- HOOK UP EXTERNAL ELASTICSEARCH ------------------------------------
kind: Service
metadata:
  name: elasticsearch
spec:
  type: ClusterIP
  ports:
    - port: 9200
      targetPort: 9200
---
apiVersion: v1
kind: Endpoints
metadata:
  name: elasticsearch
subsets:
  - addresses:
    - ip: 172.32.1.245 # (44.242.32.23) your (external) ES host TODO figure out nice way to make this a variable (env does not work)
    ports:
      - port: 9200
