k8s-kaldi_nl-separate-local.yaml
apiVersion: apps/v1 # -------------- SPECIFIC COMPONENTS FOR PROCESSING ASR -------------------------------
kind: Deployment
metadata:
  name: kaldi-nl-api-deployment
  labels:
    app: dane-asr-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dane-asr-api
  template:
    metadata:
      labels:
        app: dane-asr-api
    spec:
      containers:
      - name: kaldi-nl-api
        image: dane-kaldi-api:latest
        imagePullPolicy: Never
        volumeMounts:
        - name: dane-kaldi-api-cfg-mnt
          mountPath: "/src/config"
          readOnly: true
        - name: dane-pvc-mnt
          mountPath: "/mnt/dane-fs" #Note: the dane-asr-worker creates the input & output dir for ASR
      volumes:
      - name: dane-kaldi-api-cfg-mnt
        configMap:
          name: dane-kaldi-api-cfg
      - name: dane-pvc-mnt
        persistentVolumeClaim:
          claimName: asr-data-pvc
---
apiVersion: v1 # service that exposes the kaldi-nl-api for the DANE ASR worker
kind: Service
metadata:
  name: dane-asr-api
spec:
  selector:
    app: dane-asr-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3023
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dane-asr-api-ingress
spec:
  rules:
  - host: kaldi.dane.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dane-asr-api
            port:
              number: 80
